<resources>
    <string name="app_name">QuickClips</string>
    <string name="title_home">Your Clips</string>
    <string name="comm_s">Community Clips</string>
    <string name="test">Say Hi Matt</string>

    <string name="sign_in">Sign In</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in_google">Sign In With Google</string>
    <string name="sign_up_with_email">Sign Up with Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="sample_title_s">Sample Title</string>
    <string name="sample_text_s">Sample Text</string>
    <string name="modify">Modify</string>
    <string name="copy_bs">Copy</string>
    <string name="add_clip">Add Clip</string>
    <string name="cancel">Cancel</string>
    <string name="sign_out">Sign Out</string>
    <string name="about_name">About</string>

    <string name="clip_title">Title</string>
    <string name="clip_text">Text</string>
    <string name="is_public">Public</string>
    <string name="edit_s">Edit</string>
    <string name="save">Save</string>
    <string name="about">Tired of typing the same pieces of text to people when you\'d rather copy and paste your own generic pieces?\nQuickClips saves you time by streamlining your business related texting.</string>
    <string name="account_s">Account</string>
    <string name="search_guide_s">Search Here</string>
    <string name="search_b_s">search button</string>
    <string name="forgot_password">Forgot Password?</string>
</resources>