<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingTop="10dp"
    android:paddingRight="20dp"
    android:paddingBottom="10dp"
    tools:context="com.fourstooges.quickclips.activity.SignUpActivity">

  <ImageView
      android:id="@+id/iv_app"
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:contentDescription="@string/app_name"
      android:src="@mipmap/ic_launcher"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/tv_app"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/app_name"
      android:textAppearance="@style/TextAppearance.AppCompat.Large"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/iv_app" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:orientation="vertical"
      android:layout_marginTop="50dp"
      app:layout_constraintBottom_toTopOf="@+id/bt_login_google"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_app"
      app:layout_constraintVertical_bias="0.0">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:hint="@string/email"
        app:startIconDrawable="@drawable/ic_email">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/edit_text_email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:inputType="textWebEmailAddress"
          android:singleLine="true"
          android:background="@drawable/rectangle_field"
          app:layout_constraintTop_toBottomOf="@+id/tv_app" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:hint="@string/password"
        app:startIconDrawable="@drawable/ic_lock">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
          android:background="@drawable/rectangle_field"
          android:inputType="textPassword"
        android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_layout_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:hint="Confirm Password"
        app:startIconDrawable="@drawable/ic_lock">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/edit_confirm_text_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPassword"
          android:background="@drawable/rectangle_field"
          android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="signUp"
        android:text="@string/sign_up" />
    <!--        android:onClick="sign_up"-->

  </LinearLayout>
  
  </androidx.constraintlayout.widget.ConstraintLayout>